Fix white-spacing for error header on 500 page

--- a/assets/styles/components/_page.scss
+++ b/assets/styles/components/_page.scss
@@ -18,7 +18,7 @@
 		pre {
 			#{headings()} {
 				text-align: left;
-				white-space: normal;
+				white-space: pre-wrap;
 			}
 
 			padding: 0.8em 1.6em;
